# rust-rocket

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
prisma/: schema.prisma
prisma_cli/: Cargo.toml
src/: catchers.rs  const.rs  jwt.rs  main.rs  prisma.rs  routes.rs  state.rs  utils.rs  validation.rs
src/routes/: auth.rs  body.rs  business.rs  mod.rs  query.rs  review.rs
