[package]
name = "rocket"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "prisma_cli",
]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", default-features = false, features = ["postgresql"] }
validator = { version = "0.16.0", features = ["derive"] }
chrono = "0.4.24"
jsonwebtoken = "8.3.0"
dotenvy = "0.15.7"
redis = "0.23.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
